--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
                 <div class="bnt2"><a href="#" class="bnt">start</a></div>
             </div>
             <picture>
-                <source media="(max-width:734px)" srcset="donna-in-carriera-300.png">
-                <img src="donna-in-carriera-400.png" alt="">
+                <source media="(max-width:734px)" srcset="donna-in-carriera-200.png">
+                <img src="donna-in-carriera-400.png" alt="donna-in-carriera-02.png">
+            </picture>
+            <picture>
+                <source media="(max-width:533px)" srcset="">
             </picture>
         </main>
         <aside>
