--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         </section>
         <main>
             <div class="maindiv">
+                <p class="p-main">Comece na moda já</p>
                 <h1>AS MELHORAS ROUPAS<div id="letra"> DA REGIÃO</div></h1>
-                <p><small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat laboriosam facilis alias rerum commodi nulla nemo</small>.</p>
+                <p><small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat</small>.</p>
                 <div class="bnt2"><a href="#" class="bnt">start</a></div>
             </div>
             <picture>
