--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main>
             <div class="maindiv">
                 <p class="p-main">Comece na moda já</p>
-                <h1>AS MELHORAS ROUPAS<div id="letra"> DA REGIÃO</div></h1>
+                <h1>AS MELHORES ROUPAS<div id="letra"> DA REGIÃO</div></h1>
                 <p><small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat</small>.</p>
                 <div class="bnt2"><a href="#" class="bnt">start</a></div>
             </div>
