--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </section>
         <main>
             <div class="maindiv">
-                <p class="p-main">Comece na moda já</p>
+                <h6 class="p-main">Comece na moda já</h6>
                 <h1>AS MELHORES ROUPAS<div id="letra"> DA REGIÃO</div></h1>
                 <p><small>Clique em start para fazer o login e conhecer mais dos nossos produtos</small>.</p>
                 <div class="bnt2"><a href="#" class="bnt">start</a></div>
@@ -35,7 +35,7 @@
         <aside>
         </aside>
         <footer>
-            <p><small>Created by Bruno Mikael mudança 10</small></p>
+            <p><small>Created by Bruno Mikael mudança 11</small></p>
         </footer>
     </div>
 </body>
