--- a/historia.html
+++ b/historia.html
@@ -13,8 +13,11 @@
     <section>
         <p>MERMAID</p>
         <a href="historia.html" class="b">historia</a>
-        <a href="" class="b">promoção</a>
+        <a href="contato.html" class="b">contato</a>
         <a href="index.html" class="b">inicio</a>
     </section>
+    <main>
+
+    </main>
 </body>
 </html>
