--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <section>
             <p>MERMAID</p>
             <a href="historia.html" class="b">historia</a>
-            <a href="" class="b">promoção</a>
+            <a href="contato.html" class="b">contato</a>
             <a href="" class="b">inicio</a>
         </section>
-        <main>
+        <main class="main-index">
             <div class="maindiv">
                 <h6 class="p-main">Comece na moda já</h6>
                 <h1>AS MELHORES ROUPAS<div id="letra"> DA REGIÃO</div></h1>
@@ -35,7 +35,7 @@
         <aside>
         </aside>
         <footer>
-            <p><small>Created by Bruno Mikael mudança 11</small></p>
+            <p><small>Created by Bruno Mikael mudança 12</small></p>
         </footer>
     </div>
 </body>
