--- a/contato.html
+++ b/contato.html
@@ -22,9 +22,13 @@
                 <source media="(max-width:568px)" srcset="Round Photo_Oct062022_134740-200.png">
                 <img src="Round Photo_Oct062022_134740-200.png" alt="aa">
             </picture>
-            <img src="bxl-instagram.svg" alt="">
+            <div>
+                <img src="bxl-instagram.svg" alt="">
+                <img src="bxl-github.svg" alt="">
+                <img src="bxl-linkedin-square.svg" alt="">
+            </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis laboriosam temporibus consectetur, cumque inventore magni est omnis ea aut assumenda repellendus maxime. Sequi, mollitia aperiam quam iste magnam soluta commodi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius voluptatum quam minus dolore facilis ab quaerat pariatur hic natus error officia maxime, sit tempore sed, cum consequatur est odio magni! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil repudiandae rem atque esse itaque hic explicabo odio incidunt? Atque minus culpa quis animi hic quidem deserunt adipisci explicabo beatae obcaecati! </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis laboriosam temporibus consectetur, cumque inventore magni est omnis ea aut assumenda repellendus maxime. Sequi, mollitia aperiam quam iste magnam soluta commodi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius voluptatum quam minus dolore facilis ab quaerat pariatur hic natus error officia maxime, sit tempore sed, cum consequatur est odio magni! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil repudiandae rem atque esse itaque hic explicabo odio incidunt? Atque minus culpa quis animi hic quidem deserunt adipisci explicabo beatae obcaecati!Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis laboriosam temporibus consectetur, cumque inventore magni est omnis ea </p>
     </main>
     <aside class="aside-contato">
 
