--- a/contato.html
+++ b/contato.html
@@ -23,9 +23,9 @@
                 <img src="Round Photo_Oct062022_134740-200.png" alt="aa">
             </picture>
             <div>
-                <img src="bxl-instagram.svg" alt="">
-                <img src="bxl-github.svg" alt="">
-                <img src="bxl-linkedin-square.svg" alt="">
+                <img src="bxl-instagram.svg" alt="instagram">
+                <a href="https://github.com/Bruno710454" target="_blank"><img src="bxl-github.svg" alt="github"></a>
+                <a href="https://www.linkedin.com/in/bruno-mikael-9934581b6/" target="_blank"><img src="bxl-linkedin-square.svg" alt="linkedin"></a>
             </div>
         </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis laboriosam temporibus consectetur, cumque inventore magni est omnis ea aut assumenda repellendus maxime. Sequi, mollitia aperiam quam iste magnam soluta commodi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius voluptatum quam minus dolore facilis ab quaerat pariatur hic natus error officia maxime, sit tempore sed, cum consequatur est odio magni! Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
