--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+    
     </header>
     <section>
         <p>MERMAID</p>
@@ -39,6 +40,8 @@
     <aside class="aside-contato">
 
     </aside>
-    <footer></footer>
+    <footer>
+        <p><small>Criado por Bruno Mikael</small></p>
+    </footer>
 </body>
 </html>
