--- a/historia.html
+++ b/historia.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <h1 style="color: orange;">ola</h1>
     </header>
     <section>
         <p>MERMAID</p>
@@ -16,8 +17,27 @@
         <a href="contato.html" class="b">contato</a>
         <a href="index.html" class="b">inicio</a>
     </section>
-    <main>
-
+    <main class="main-historia">
+        <div class="div-historia">
+            <h1 style="color: black; font-size: 20px;"><div style="font-weight: lighter;">NOSSA</h1>
+            <h1 style="color:black ; font-size: 20px;">
+                <strong>HISTORIA</strong>
+            </h1>
+        </div>
+        <div class="div-traço"></div>
+       <p>padipisicing elit. Aspernatur ex animi minus non aperiam, beatae similique fugiat explicabo, iure fugit, laborum atque at repellat quo nesciunt! Nihil voluptatum vel quasi. Lorem, ipsum dolor sit amet consectetur adipisicing eli </p>
+        <p>dus praesentium hic magnam. Non repudiandae, quidem in suscipit officiis voluptatum labore dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ex animi minus non aperiam, beatae similique fugiat explicabo, iure fugit, laborum atque at repellat quo nesciunt! Nihil voluptatum vel quasi. Lorem, ipsum dolor sit amet consectetur adipisicing eli</p>
+        <p>ficiis voluptatum labore dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ex animi minus non aperiam, beatae similique fugiat explicabo, iure fugit, laborum atque at repellat quo nesciunt! Nihil voluptatum vel quasi. Lorem, ipsum dolor sit amet consectetur adipisicing eli </p>
+        <p>dus praesentium hic magnam. Non repudiandae, quidem in suscipit officiis voluptatum labore dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ex animi minus non aperiam, beatae similique fugiat explicabo, iure fugit, laborum atque at repellat quo nesciunt! Nihil voluptatum vel quasi. Lorem, ipsum dolor sit amet consectetur adipisicing elificiis voluptatum labore dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ex animi minus non aperiam, beatae similique fugiat explicabo, iure fugit, laborum atque at repellat quo nesciunt! Nihil voluptatum vel quasi. Lorem, ipsum dolor sit amet consectetur adipisicing eli </p>
+        <p>padipisicing elit. Aspernatur ex animi minus non aperiam, beatae similique fugiat explicabo, iure fugit, laborum atque at repellat quo nesciunt! Nihil voluptatum vel quasi. Lorem, ipsum dolor sit amet consectetur adipisicing eli </p>
+        <p>dus praesentium hic magnam. Non repudiandae, quidem in suscipit officiis voluptatum labore dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ex animi minus non aperiam, beatae similique fugiat explicabo, iure fugit, laborum atque at repellat quo nesciunt! Nihil voluptatum vel quasi. Lorem, ipsum dolor sit amet consectetur adipisicing eli</p>
+        <p>ficiis voluptatum labore dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ex animi minus non aperiam, beatae similique fugiat explicabo, iure fugit, laborum atque at repellat quo nesciunt! Nihil voluptatum vel quasi. Lorem, ipsum dolor sit amet consectetur adipisicing eli </p>
+        <p>padipisicing elit. Aspernatur ex animi minus non aperiam, beatae similique fugiat explicabo, iure fugit, laborum atque at repellat quo nesciunt! Nihil voluptatum vel quasi. Lorem, ipsum dolor sit amet consectetur adipisicing eli </p>
+        <p>dus praesentium hic magnam. Non repudiandae, quidem in suscipit officiis voluptatum labore dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ex animi minus non aperiam, beatae similique fugiat explicabo, iure fugit, laborum atque at repellat quo nesciunt! Nihil voluptatum vel quasi. Lorem, ipsum dolor sit amet consectetur adipisicing eli</p>
+        <p>ficiis voluptatum labore dolorum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ex animi minus non aperiam, beatae similique fugiat explicabo, iure fugit, laborum atque at repellat quo nesciunt! Nihil voluptatum vel quasi. Lorem, ipsum dolor sit amet consectetur adipisicing eli </p>
     </main>
+    <footer>
+        <p><small>Criado por Bruno Mikael</small></p>
+    </footer>
 </body>
 </html>
