--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <aside>
         </aside>
         <footer>
-            <p><small>Created by Bruno Mikael mudança 14</small></p>
+            <p><small>Criado por Bruno Mikael</small></p>
         </footer>
     </div>
 </body>
